# burundi-compliance

./: LICENSE  Privacy Policy  Privacy Policy.md  README.md  Terms and Conditions  Terms and Conditions.md  pyproject.toml
.github/workflows/: ci.yml
burundi_compliance/: hooks.py  modules.txt
burundi_compliance/burundi_compliance/api_classes/: add_invoices.py  add_stock_movement.py  base.py  cancel_invoice.py  check_tin.py  get_invoices.py  test_add_invoices.py  test_authentication.py  test_invoices.py  test_stock_movement.py
burundi_compliance/burundi_compliance/client_scripts/: add_stock_movement.js  confirm_tin.js  customer_supplier_check_tin.js  customer_tin.js  e_invoicing.js  get_invoice.js  pos_invoice_list.js  sales_invoice_list.js  stock_list.js  stock_recon_list.js
burundi_compliance/burundi_compliance/controllers/: taxes_and_totals.py  test_taxes_and_totals.py
burundi_compliance/burundi_compliance/custom/: address.json  asset_capitalization.json  asset_repair.json  customer.json  delivery_note.json  delivery_note_item.json  employee.json  item.json  item_barcode.json  item_default.json  packed_item.json  pos_invoice.json  pos_invoice_item.json  purchase_invoice.json  purchase_invoice_item.json  purchase_receipt.json  purchase_receipt_item.json  purchase_taxes_and_charges.json  salary_component.json  sales_invoice.json  sales_invoice_item.json  sales_taxes_and_charges.json  (+6 more)
burundi_compliance/fixtures/: ebims_api_methods.json  ebims_apis.json  ebms_api_methods.json  gst_category.json
burundi_compliance/templates/: sales_invoice_error_mail.html
(+100 files in other folders)
