[project]
name = "burundi_compliance"
authors = [
    { name = "Navari Limited", email = "mania@navari.co.ke"}
]
description = "Burundi OBR Tax Inegration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    #"frappe~=15.0.0", # Installed and managed by bench.
    "qrcode~=7.4.2",
    "PyQRCode==1.2.1,
    "pillow==10.2.0,
    "pypng==0.20220715.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
